--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="sibling_1 year">2020 - 2021</div>
                 </div>
                 <div class="second_box">
-                    <div class="skill_box">SKILL'S</div>
+                    <div class="skill_head">SKILL'S</div>
                     <div class="skills">
                         <div class="skill_names">
                             <span class="CJ">HTML</span>
